--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,4 @@ local.properties
 
 # list by only name$  ls -1a
 
-#*have to run this every time terminal is started (need to script this ... eventually)*
-# eval "$(ssh-agent -s)" 
-# ssh-add ~/.ssh/id_ed25519_github  
-# testing:    ssh -T git@github.com 
+# bash script to do a quick sync
